# tracer-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  Settings.toml  example v2 future.sh  install-tracer.sh  old-tracer-download.sh  requirements.sh
.github/workflows/: build-and-test.yml  cross-platform-release.yml  release.yml  rust.yml  upload-r2.yml  version-bump.yml
archive/: arm-release.yml  oldrelease.yml  oldreleasev2.yml  version-bump.yml
bpf/: monitor.c
examples/: example v1.sh
falco/: README.md  falco.yaml  falco_rules.local.yaml  falco_rules.yaml  sidekick-config.yaml
falco-0.37.1-x86_64/etc/falco/: falco_rules.local.yaml
falco-0.37.1-x86_64/etc/falcoctl/: falcoctl.yaml
falco-0.37.1-x86_64/usr/src/falco-7.0.0+driver/: Makefile  dkms.conf  driver_config.h
src/: cli.rs  events.rs  lib.rs  main.rs
src/bpf/: execve.bpf.rs  mod.rs  monitor.c
src/cli/: mod.rs  setup.rs
src/fluent-bit/: fluent-bit.conf  mod.rs
src/fluent_bit/: mod.rs
src/methods/: config.rs  events.rs  mod.rs  utils.rs
src/metrics/: api.rs  disk.rs  exmple.rs  mod.rs
src/setup/: add_to_path.rs  app_config.rs  config.rs  files.rs  mod.rs  paths.rs  test-setup.rs
tests/: cli.rs  events.rs  test-cli.rs  test-events.rs  test-pipeline-run.rs  test-pipeline.rs
