[package]
name = "tracer_cli"
version = "0.1.0"
authors = ["Vincent Hus <developers@tacer.bio>"]
edition = "2018"

# Make tests work with the name used in the tutorial
[[bin]]
name = "tracer-cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
tokio = { version = "1.0.1", features = ["full"] }
reqwest = { version = "0.11", features = [
    "json",
] } # Adjust the version as needed
serde_json = "1.0.64"
serde = { version = "1.0.127", features = ["derive"] }
tokio-util = "0.6.8"
tokio-tungstenite = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
mockito = "0.32"
tokio-test = "0.4.4"  # Update this line
