[package]
name = "tracer"
version = "0.0.35"
authors = ["Vincent Hus <developers@tracer.bio>"]
edition = "2018"


# Define the library
[lib]
name = "tracer"
path = "src/lib.rs"

# Define the binary
[[bin]]
name = "tracer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
tokio = { version = "1.0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.64"
serde = { version = "1.0.127", features = ["derive"] }
config = "0.13"
tokio-util = "0.6.8"
tokio-tungstenite = "0.13.0"
dirs = "3.0"
tempfile = "3.10.1"

[package.metadata.release]
sign-tag = true
disable-publish = false


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
mockito = "0.32"
tokio-test = "0.4.4"
